<resources>
    <string name="app_name">MVC_Sample</string>

    <string name="current_year_month_text">2021년 11월</string>
    <string name="previous_month">이전 달</string>
    <string name="next_month">다음 달</string>

    <!-- 요일 정보 -->
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WES</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <!-- 날짜 텍스트 -->
    <string name="date">00</string>


</resources>