<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calendar_main_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/button_pre_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_before_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textview_current_month"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_current_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/button_pre_month"
                app:layout_constraintEnd_toStartOf="@+id/button_next_month"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="6"
                app:layout_constraintStart_toEndOf="@+id/button_pre_month"
                app:layout_constraintTop_toTopOf="@+id/button_pre_month"
                tools:text="@string/current_year_month_text" />

            <ImageView
                android:id="@+id/button_next_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/textview_current_month"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout
            android:id="@+id/linear_layout_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@drawable/bg_outline"
                android:text="@string/sunday"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@drawable/bg_outline"
                android:text="@string/monday"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@drawable/bg_outline"
                android:text="@string/tuesday"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@drawable/bg_outline"
                android:text="@string/wednesday"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@drawable/bg_outline"
                android:text="@string/thursday"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@drawable/bg_outline"
                android:text="@string/friday"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@drawable/bg_outline"
                android:text="@string/saturday"
                android:textAlignment="center" />
        </GridLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_calendar_date" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>